Fixes nav overlap on quick nav. Adds titles to saint page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -462,3 +462,9 @@ width: 200px;
 .related-saint p {
 text-align: center;
 }
+
+/* Saint Section Title */
+
+.saint-section-title {
+text-align: center !important;
+}
